<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.anatasia.controlls.MainActivity" 
    android:orientation="vertical">

    <Button
        android:id="@+id/apple_daily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apple_daily" />
    
     <Button
        android:id="@+id/tw_nextmedia_magazine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tw_nextmedia_magazine" />
     
     <Button
        android:id="@+id/nextmediatw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextmediatw" />
     
    <Button
        android:id="@+id/oneplus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oneplus" />
    
    <Button
        android:id="@+id/epaper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/epaper" />
    
    <Button
        android:id="@+id/overseajd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overseajd" />

</LinearLayout>
